--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
     <title>Uma Viagem em Família</title>
 </head>
 
 <body>
     <main>
-        <div class="passo" id="passo-0">
+        <div class="passo ativo" id="passo-0">
+            <img src="cenario-passo0.png" alt="">
             <p>Em uma dia de sol, uma família pretende ir viajar, porém não sabem direito para qual lugar ir, então foi
                 decidido sair para um dos dois lugares específicos, esta família decidi e vai!</p>
             <button class="btn-proximo" data-proximo="1">Parque Aquático</button>
@@ -36,7 +37,7 @@
 
 
     </main>
-
+    <script src="script.js"></script>
 
 
 
