--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
-    <title>Uma Viagem em Família</title>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
+    <title>Em busca da cidade perdida</title>
 </head>
 
 <body>
@@ -19,18 +21,61 @@
                 decidido sair para um dos dois lugares específicos, esta família decidi e vai!</p>
             <button class="btn-proximo" data-proximo="1">Parque Aquático</button>
             <button class="btn-proximo" data-proximo="2">Praia</button>
-
         </div>
-
         <div class="passo" id="passo-1">
             <p>O parque aquático é uns dos mais populares do Brasil, localizado na cidade de lindóia, porém a família
                 que está saindo para passar o dia de verão, não tem um transporte específico, assim a família pega um
-                ônibus para a cidade passar o fim do dia! </p>
-            <button class="btn-proximo" data-proximo="1">O ônibus parando no posto</button>
-            <button class="btn-proximo" data-proximo="2">O ônibus quebrou!</button>
+                ônibus para a cidade passar o fim do dia!
+            </p>
+            <button class="btn-proximo" data-proximo="3">O ônibus parando no posto</button>
+            <button class="btn-proximo" data-proximo="4">O ônibus quebrou!</button>
+        </div>
+        <div class="passo" id="passo-2">
+            <p>A família então começa a sua viagem em uma verdadeira alegria, o trajeto é longo, mas tem o carro para se
+                locomover!</p>
+            <button class="btn-proximo" data-proximo="5">No caminho do pedágio!</button>
+            <button class="btn-proximo" data-proximo="6">Colocar gasolina no carro!</button>
+        </div>
+        <div class="passo" id="passo-3">
+            <p>A viagem era muito longe, então o transporte parou em um posto para fazer as necessidades dos passageiros!</p>
+            <button class="btn-proximo" data-proximo="7">Chegando no parque aquático!</button>
+        </div>
+        <div class="passo" id="passo-4">
+            <p>Durante a viagem de ônibus, o transporte acaba se quebrando, a família só tem um dinheiro para pagar um Uber , e decidem ir embora para casa, pois se continuasem não teriam como voltar!</p>
+        </div>
+        <div class="passo" id="passo-5">
+            <p>Durante a viagem de ônibus, o transporte acaba se quebrando, a família só tem um dinheiro para pagar um Uber , e decidem ir embora para casa, pois se continuasem não teriam como voltar!</p>
+            <button class="btn-proximo" data-proximo="7">Caminho para a praia!</button>
+        </div>
+        <div class="passo" id="passo-6">
+            <p>A família viu que o carro estava ficando sem gasolina, então foi no posto e encheu o tanque do carro e prosseguiu a viagem da família!</p>
+            <button class="btn-proximo" data-proximo="8">Chegando na praia?</button>
+        </div>
+        <div class="passo" id="passo-7">
+            <p>A família chegando na Praia, também considerado um Parque Aquático já começa a compra dos ingressos para a entrada!</p>
+            <button class="btn-proximo" data-proximo="9">Junior no Tobogã!</button>
+            <button class="btn-proximo" data-proximo="10">Alicia na praia!</button>
+        </div>
+        <div class="passo" id="passo-8">
+            <p>Estava tudo bem a viajem, porém o filho do pai e mãe esqueceu de ir no banheiro, assim o pai teve que parar em uma beira que só tinha mato para fazer as necessidades do garoto.</p>
+            <button class="btn-proximo" data-proximo="7">Finalmente praia!</button>
+        </div>
+        <div class="passo" id="passo-9">
+            <p>Junior o garoto da família espera a fila do escorregador, então SPLASH um estouro quando o menino entra na aguá, foi uma sensanção incrível para o garoto!</p>
+            <button class="btn-proximo" data-proximo="11">Família para Casa!</button>
+        </div>
+        <div class="passo" id="passo-10">
+            <p>Alicia fica tomando sol de bíquini, quando derrepente uma onda gigante chega e molha toda ela, acabando um pouco da expectativa de tomar vitamina D.</p>
+            <button class="btn-proximo" data-proximo="12">Alicia muda de lugar !</button>
+        </div>
+        <div class="passo" id="passo-11">
+            <p>Já estava anoitecendo, então os pais de Junior e Alicia decidem chama-los para voltar à casa. As crianças não queriam, mas tiveram que obedecer, porém to-da família teve um dia fantástico.</p>
+        </div>
+        <div class="passo" id="passo-12">
+            <p>Alicia caminha pela Praia e muda de lugar, ficando o resto da tarde lá, então sua família o chama!</p>
+            <button class="btn-proximo" data-proximo="11">Família para Casa!</button>
 
         </div>
-
 
 
 
@@ -38,9 +83,6 @@
 
     </main>
     <script src="script.js"></script>
-
-
-
 </body>
 
 </html>
