--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
-            <img src="cenario-passo0.png" alt="">
+            <img src="cenario0.png" alt="">
             <p>Em uma dia de sol, uma família pretende ir viajar, porém não sabem direito para qual lugar ir, então foi
                 decidido sair para um dos dois lugares específicos, esta família decidi e vai!</p>
             <button class="btn-proximo" data-proximo="1">Parque Aquático</button>
